--- a/css/styles.css
+++ b/css/styles.css
@@ -114,8 +114,17 @@ span {
 /* Hero section */
 .hero-section {
   padding: 188px 0;
-  background-color: #2e2f42;
   text-align: center;
+  background-color: #2e2f42;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .hero-title {
   display: inline-block;
