--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,9 @@ a:focus {
 button {
   cursor: pointer;
   background-color: #4d5ae5;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 button:hover,
 button:focus {
@@ -84,14 +87,20 @@ span {
   letter-spacing: 0.02em;
   padding: 24px 0;
   display: flex;
+  flex-direction: column;
+  gap: 20px;
   color: #2e2f42;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu-link:hover,
 .menu-link:focus {
   color: #404bbf;
 }
 
-.menu-link:hover::after {
+.menu-link:hover::after,
+.menu-link:focus::after {
   width: 48px;
   height: 4px;
   border-radius: 2px;
@@ -113,6 +122,9 @@ span {
   letter-spacing: 0.02em;
   padding: 24px 0;
   color: #434455;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-info .contact-link:hover,
 .contact-info .contact-link:focus {
@@ -268,17 +280,29 @@ span {
 }
 .team-icons {
   display: flex;
-  gap: 24px;
   justify-content: center;
+  gap: 24px;
+}
+.team-icons-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-media-team {
-  padding: 12px 0;
-  background-color: #4d5ae5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   fill: #f4f4fd;
-  border-radius: 50%;
 }
-.social-media-team:hover,
-.social-media-team:focus {
+.team-icons-link:hover,
+.team-icons-link:focus {
   background-color: #404bbf;
 }
 /* Portfolio */
@@ -308,7 +332,32 @@ span {
   align-items: flex-start;
   width: calc((100% - 48px) / 3);
 }
-
+.portfolio-img {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
+  padding-top: 40px;
+  padding-right: 32px;
+  padding-left: 32px;
+  background: #4d5ae5;
+}
+.portfolio-img:hover .overlay {
+  transform: translateY(0);
+}
+.overlay-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+}
 .portfolio-box {
   display: flex;
   padding: 32px 16px;
@@ -319,6 +368,16 @@ span {
   align-self: stretch;
   border: 1px solid #e7e9fc;
   border-top: none;
+  transition-property: border box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-box:hover,
+.portfolio-box:focus {
+  border: 1px solid #f4f4fd;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .portfolio-item-title {
   font-size: 20px;
@@ -373,16 +432,27 @@ span {
 .footer-icons {
   display: flex;
   gap: 16px;
+}
+.social-media-link {
+  display: flex;
   justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-media-footer {
-  padding: 8px 0px;
-  background-color: #4d5ae5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   fill: #f4f4fd;
-  border-radius: 50%;
 }
-.social-media-footer:hover,
-.social-media-footer:focus {
+.social-media-link:hover,
+.social-media-link:focus {
   background-color: #31d0aa;
 }
 .media {
