--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,7 @@ span {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  max-width: 1440px;
 }
 
 .hero-title {
@@ -420,6 +421,9 @@ span {
   height: 72px;
   color: #f4f4fd;
 }
+.logo-text {
+  margin-right: 120px;
+}
 
 .social-media-title {
   font-size: 16px;
@@ -433,12 +437,16 @@ span {
   display: flex;
   gap: 16px;
 }
+.footer-icons-items {
+  width: 40px;
+  height: 40px;
+}
 .social-media-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
   transition-property: background-color;
@@ -461,6 +469,5 @@ span {
 }
 .page-footer .container {
   display: flex;
-  gap: 120px;
-  align-items: flex-start;
+  align-items: baseline;
 }
