--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,9 @@ p {
 /* Header */
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 .page-header .container {
   display: flex;
@@ -81,14 +84,13 @@ span {
   gap: 40px;
 }
 .menu-link {
+  position: relative;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   padding: 24px 0;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+  display: block;
   color: #2e2f42;
   transition-property: color;
   transition-duration: 250ms;
@@ -101,6 +103,9 @@ span {
 
 .menu-link:hover::after,
 .menu-link:focus::after {
+  position: absolute;
+  left: 0;
+  bottom: -1px;
   width: 48px;
   height: 4px;
   border-radius: 2px;
@@ -333,6 +338,13 @@ span {
   align-items: flex-start;
   width: calc((100% - 48px) / 3);
 }
+.portfolio-item:hover,
+.portfolio-item:focus {
+  border: 1px solid #f4f4fd;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
 .portfolio-img {
   position: relative;
   overflow: hidden;
@@ -373,13 +385,7 @@ span {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-box:hover,
-.portfolio-box:focus {
-  border: 1px solid #f4f4fd;
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
+
 .portfolio-item-title {
   font-size: 20px;
   font-weight: 500;
