--- a/css/styles.css
+++ b/css/styles.css
@@ -213,9 +213,11 @@ span {
   width: calc((100% - 72px) / 4);
   flex-direction: column;
   align-items: flex-start;
-  gap: 8px;
 }
 .benefits-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 4px;
   border: 1px solid #8e8f99;
   background: #f4f4fd;
@@ -223,6 +225,7 @@ span {
   height: 112px;
   padding: 24px 0;
   fill: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .benefits-title {
