--- a/css/styles.css
+++ b/css/styles.css
@@ -293,17 +293,25 @@ span {
   justify-content: center;
   gap: 24px;
 }
+.team-icons-items {
+  width: 40px;
+  height: 40px;
+}
 .team-icons-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-icons-link:hover,
+.team-icons-link:focus {
+  background-color: #404bbf;
 }
 .social-media-team {
   display: flex;
@@ -311,10 +319,7 @@ span {
   align-items: center;
   fill: #f4f4fd;
 }
-.team-icons-link:hover,
-.team-icons-link:focus {
-  background-color: #404bbf;
-}
+
 /* Portfolio */
 .portfolio {
   padding: 120px 0;
