--- a/css/styles.css
+++ b/css/styles.css
@@ -346,13 +346,12 @@ span {
   flex-direction: column;
   align-items: flex-start;
   width: calc((100% - 48px) / 3);
-  transition-property: border box-shadow;
+  transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item:hover,
 .portfolio-item:focus {
-  border: 1px solid #f4f4fd;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
@@ -369,9 +368,7 @@ span {
   height: 100%;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateY(100%);
-  padding-top: 40px;
-  padding-right: 32px;
-  padding-left: 32px;
+  padding: 40px 32px;
   background: #4d5ae5;
   font-size: 16px;
   line-height: 1.5;
@@ -391,11 +388,14 @@ span {
   align-self: stretch;
   border: 1px solid #e7e9fc;
   border-top: none;
-  transition-property: border box-shadow;
+  transition-property: border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.portfolio-box:hover,
+.portfolio-box:focus {
+  border: 1px solid #f4f4fd;
+}
 .portfolio-item-title {
   font-size: 20px;
   font-weight: 500;
